<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".RegisterActivity">
    <ImageView
        android:id="@+id/register_shop_logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/newlogoskyrun"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/register_username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_shop_logo"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/input_design"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName|text"
        android:padding="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/colorAccent"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/register_phone_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_username_input"
        android:background="@drawable/input_design"
        android:hint="@string/phone_number"
        android:inputType="number|phone"
        android:padding="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/register_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_phone_number_input"
        android:background="@drawable/input_design"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password_input"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/buttons"
        android:padding="20dp"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/back_to_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        android:text="@string/back_to_home"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        android:textStyle="bold" />

</RelativeLayout>