<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminCategoryActivity">

    <TextView
        android:id="@+id/slogan_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/add_new_product"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linear1_category_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slogan_category"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">

        <ImageView
            android:id="@+id/citycoco"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:contentDescription="@string/kugoo"
            android:src="@drawable/scooter1" />

        <ImageView
            android:id="@+id/electro_scooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/e_scooter"
            android:src="@drawable/scooter3" />

        <ImageView
            android:id="@+id/monowheel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/mono_wheel"
            android:src="@drawable/monowheel" />
        <ImageView
            android:id="@+id/bycycle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/mono_wheel"
            android:src="@drawable/velo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2_category_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear1_category_layout"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/gyro_hover"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:contentDescription="@string/kugoo"
            android:src="@drawable/hover" />

        <ImageView
            android:id="@+id/nine_bot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/e_scooter"
            android:src="@drawable/ninebot1" />

        <ImageView
            android:id="@+id/electro_atv"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/mono_wheel"
            android:src="@drawable/ic_atv" />

        <ImageView
            android:id="@+id/accessories"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/mono_wheel"
            android:src="@drawable/ic_helmet" />

    </LinearLayout>

    <Button
        android:id="@+id/check_orders_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimaryDark"
        android:layout_above="@+id/admin_logout_btn"
        android:text="check new orders"
        android:layout_marginBottom="15dp"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/admin_logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="Logout"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textAllCaps="false"
        />

</RelativeLayout>